# signal-version-handover

./: .gitignore  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  flake.nix
schema/: signal-version-handover.concept.schema
src/: lib.rs
tests/: round_trip.rs
