[package]
name         = "signal-version-handover"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-version-handover"
description  = "Signal contract for component version handover coordination."
publish      = false

[lib]
name = "signal_version_handover"
path = "src/lib.rs"

[features]
default   = []
nota-text = ["signal-frame/nota-text"]

[[test]]
name = "round_trip"
path = "tests/round_trip.rs"
required-features = ["nota-text"]

[dependencies]
signal-frame       = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "drop-next" }
version-projection = { git = "https://github.com/LiGoldragon/version-projection.git", branch = "drop-next", features = ["nota-text"] }
nota          = { git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
rkyv               = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror          = "2"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
